--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -3,8 +3,10 @@ inventory = inventory/
 roles_path = roles/
 host_key_checking = False
 retry_files_enabled = False
-stdout_callback = yaml
-callback_whitelist = timer, profile_tasks
+stdout_callback = default
+result_format = yaml
+callbacks_enabled = timer, profile_tasks
+collections_path = ~/.ansible/collections
 
 [privilege_escalation]
 become = True
