--- a/ansible/roles/nodejs/tasks/main.yml
+++ b/ansible/roles/nodejs/tasks/main.yml
@@ -1,26 +1,52 @@
 ---
-- name: Install Node.js prerequisites
+- name: Check if curl is installed (Amazon Linux)
+  command: which curl
+  register: curl_check
+  changed_when: false
+  failed_when: false
+  when: ansible_os_family == "RedHat"
+
+- name: Install Node.js prerequisites (Amazon Linux)
+  yum:
+    name:
+      - curl
+    state: present
+  when: ansible_os_family == "RedHat" and curl_check.rc != 0
+
+- name: Install Node.js prerequisites (Ubuntu/Debian)
   apt:
     name:
       - curl
       - gnupg
     state: present
+  when: ansible_os_family == "Debian"
 
-- name: Add NodeSource GPG key
+- name: Add NodeSource GPG key (Ubuntu/Debian)
   apt_key:
     url: https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key
     state: present
+  when: ansible_os_family == "Debian"
 
-- name: Add NodeSource repository
+- name: Add NodeSource repository (Ubuntu/Debian)
   apt_repository:
-    repo: "deb https://deb.nodesource.com/node_{{ nodejs_version }}.x nodistro main"
+    repo: "deb https://deb.nodesource.com/node_{{ nodejs_version | default('20') }}.x nodistro main"
     state: present
+  when: ansible_os_family == "Debian"
 
-- name: Install Node.js
+- name: Install Node.js (Ubuntu/Debian)
   apt:
     name: nodejs
     state: present
     update_cache: yes
+  when: ansible_os_family == "Debian"
+
+- name: Install Node.js (Amazon Linux)
+  yum:
+    name:
+      - nodejs
+      - npm
+    state: present
+  when: ansible_os_family == "RedHat"
 
 - name: Install PM2 globally
   npm:
@@ -29,7 +55,7 @@
     state: present
 
 - name: Setup PM2 startup script
-  command: pm2 startup systemd -u {{ app_user }} --hp {{ app_home }}
+  command: pm2 startup systemd -u {{ app_user | default('yocto') }} --hp {{ app_home | default('/opt/yocto_builder') }}
   args:
-    creates: /etc/systemd/system/pm2-{{ app_user }}.service
+    creates: /etc/systemd/system/pm2-{{ app_user | default('yocto') }}.service
 
