--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.4",
+    "@types/bcrypt": "^6.0.0",
+    "@types/pg": "^8.16.0",
     "ansi-to-html": "^0.7.2",
+    "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -28,6 +31,8 @@
     "lucide-react": "^0.469.0",
     "next": "^15.1.0",
     "next-auth": "^5.0.0-beta.25",
+    "pg": "^8.16.3",
+    "pm2": "^6.0.14",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "simple-git": "^3.27.0",
