--- a/ansible/playbooks/aws-full-deploy.yml
+++ b/ansible/playbooks/aws-full-deploy.yml
@@ -1,22 +1,115 @@
 ---
-# Full deployment: Provision EC2 and Deploy Application
-- name: Provision AWS EC2 Instance
+# Full deployment playbook - handles both provisioning and deployment
+# This playbook can be run multiple times safely (idempotent)
+- name: Full AWS Deployment for YoctoBuilder
   hosts: localhost
   connection: local
   gather_facts: no
-  roles:
-    - role: aws_ec2
-      vars:
-        aws_region: "{{ aws_region | default('ap-south-1') }}"
-        instance_type: "{{ instance_type | default('m5.2xlarge') }}"
-        key_name: "{{ key_name | default('ec2_vipinr') }}"
-        key_path: "{{ key_path | default('../../.secrets/ec2_vipinr.pem') }}"
-        security_group_name: "{{ security_group_name | default('yocto-builder-sg') }}"
-        instance_name: "{{ instance_name | default('yocto-builder') }}"
+  
+  vars:
+    instance_info_file: "{{ playbook_dir }}/../.aws-instance-info"
+    
+  tasks:
+    - name: Check if instance already exists
+      stat:
+        path: "{{ instance_info_file }}"
+      register: instance_info_exists
 
-- name: Deploy Application to EC2
+    - name: Load existing instance info
+      include_vars:
+        file: "{{ instance_info_file }}"
+      when: instance_info_exists.stat.exists
+      register: loaded_instance_info
+      failed_when: false
+
+    - name: Provision EC2 instance (if needed)
+      include_role:
+        name: aws_ec2
+      when: not instance_info_exists.stat.exists or not (loaded_instance_info | default({})).instance_id | default('') | length > 0
+      tags:
+        - provision
+
+    - name: Load instance info after provisioning
+      include_vars:
+        file: "{{ instance_info_file }}"
+      when: not instance_info_exists.stat.exists or not (loaded_instance_info | default({})).instance_id | default('') | length > 0
+      register: new_instance_info
+
+    - name: Set instance variables
+      set_fact:
+        target_instance_ip: "{{ (new_instance_info | default({})).public_ip | default((loaded_instance_info | default({})).public_ip | default('')) }}"
+        target_instance_id: "{{ (new_instance_info | default({})).instance_id | default((loaded_instance_info | default({})).instance_id | default('')) }}"
+
+    - name: Fail if no instance IP
+      fail:
+        msg: "No instance IP found. Provision an instance first."
+      when: target_instance_ip | length == 0
+
+    - name: Update inventory with instance IP
+      copy:
+        content: |
+          all:
+            children:
+              aws_ec2_instances:
+                hosts:
+                  yocto-builder:
+                    ansible_host: {{ target_instance_ip }}
+                    ansible_user: ec2-user
+                    ansible_ssh_private_key_file: {{ lookup('env', 'AWS_EC2_KEY_PATH') | default('../../.secrets/ec2_vipinr.pem') }}
+                    public_ip: {{ target_instance_ip }}
+        dest: "{{ playbook_dir }}/inventory/aws-ec2-static.yml"
+      delegate_to: localhost
+
+    - name: Wait for SSH to be available
+      wait_for:
+        host: "{{ target_instance_ip }}"
+        port: 22
+        delay: 10
+        timeout: 300
+      connection: local
+
+- name: Deploy application to EC2
   hosts: aws_ec2_instances
   become: yes
+  gather_facts: yes
+  
+  vars:
+    nginx_server_name: "{{ hostvars[inventory_hostname]['public_ip'] | default(ansible_host) }}"
+    nextauth_url: "{{ 'https://' if nginx_ssl_enabled | default(false) else 'http://' }}{{ hostvars[inventory_hostname]['public_ip'] | default(ansible_host) }}"
+    builds_directory: "{{ lookup('env', 'BUILDS_DIRECTORY') | default('/data/builds') }}"
+    logs_directory: "{{ lookup('env', 'LOGS_DIRECTORY') | default('/var/log/yocto_builder') }}"
+    app_repo: "{{ lookup('env', 'APP_REPO') | default('https://github.com/your-org/yocto_builder.git') }}"
+    app_branch: "{{ lookup('env', 'APP_BRANCH') | default('main') }}"
+    app_user: "{{ lookup('env', 'APP_USER') | default('yocto') }}"
+    app_group: "{{ lookup('env', 'APP_GROUP') | default('yocto') }}"
+    app_home: "{{ lookup('env', 'APP_HOME') | default('/opt/yocto_builder') }}"
+    postgresql_user: "{{ lookup('env', 'POSTGRESQL_USER') | default('yocto_admin') }}"
+    postgresql_password: "{{ lookup('env', 'POSTGRESQL_PASSWORD') | default('changeme') }}"
+    postgresql_host: "{{ lookup('env', 'POSTGRESQL_HOST') | default('localhost') }}"
+    postgresql_port: "{{ lookup('env', 'POSTGRESQL_PORT') | default('5432') | int }}"
+    postgresql_db: "{{ lookup('env', 'POSTGRESQL_DB') | default('yocto_builder') }}"
+    nextauth_secret: "{{ lookup('env', 'NEXTAUTH_SECRET') | default('changeme-secret-key-change-in-production') }}"
+    github_client_id: "{{ lookup('env', 'GITHUB_CLIENT_ID') | default('') }}"
+    github_client_secret: "{{ lookup('env', 'GITHUB_CLIENT_SECRET') | default('') }}"
+    google_client_id: "{{ lookup('env', 'GOOGLE_CLIENT_ID') | default('') }}"
+    google_client_secret: "{{ lookup('env', 'GOOGLE_CLIENT_SECRET') | default('') }}"
+    build_container_cpus: "{{ lookup('env', 'BUILD_CONTAINER_CPUS') | default(6) | int }}"
+    build_container_memory: "{{ lookup('env', 'BUILD_CONTAINER_MEMORY') | default('28g') }}"
+    pm2_instances: "{{ lookup('env', 'PM2_INSTANCES') | default(1) | int }}"
+    nginx_ssl_enabled: "{{ lookup('env', 'NGINX_SSL_ENABLED') | default('false') | bool }}"
+  
+  pre_tasks:
+    - name: Display deployment info
+      debug:
+        msg:
+          - "Deploying YoctoBuilder to {{ inventory_hostname }} ({{ ansible_host }})"
+          - "Repository: {{ app_repo }} (branch: {{ app_branch }})"
+          - "Application home: {{ app_home }}"
+
+    - name: Wait for system to be ready
+      wait_for_connection:
+        timeout: 300
+
   roles:
     - common
     - docker
@@ -25,3 +118,19 @@
     - nginx
     - yocto_builder
 
+  post_tasks:
+    - name: Display deployment status
+      debug:
+        msg:
+          - "=========================================="
+          - "YoctoBuilder Deployment Complete!"
+          - "=========================================="
+          - "Instance: {{ inventory_hostname }} ({{ ansible_host }})"
+          - "Application URL: {{ nextauth_url }}"
+          - "SSH: ssh -i {{ lookup('env', 'AWS_EC2_KEY_PATH') | default('../../.secrets/ec2_vipinr.pem') }} ec2-user@{{ ansible_host }}"
+          - "PM2 Status: Check with 'pm2 list' on the server"
+          - ""
+          - "Next steps:"
+          - "  1. Access the application at {{ nextauth_url }}"
+          - "  2. Complete initial setup if this is first deployment"
+          - "  3. Configure OAuth providers in settings (admin only)"
