--- a/ansible/roles/yocto_builder/tasks/main.yml
+++ b/ansible/roles/yocto_builder/tasks/main.yml
@@ -1,61 +1,168 @@
 ---
-- name: Clone application repository
+- name: Ensure application directory exists
+  file:
+    path: "{{ app_home }}/app"
+    state: directory
+    owner: "{{ app_user }}"
+    group: "{{ app_group }}"
+    mode: '0755'
+
+- name: Check if repository exists
+  stat:
+    path: "{{ app_home }}/app/.git"
+  register: repo_exists
+
+- name: Clone application repository (first time)
   git:
-    repo: "{{ app_repo | default('https://github.com/your-org/yocto_builder.git') }}"
-    dest: "{{ app_home | default('/opt/yocto_builder') }}/app"
-    version: "{{ app_branch | default('main') }}"
+    repo: "{{ app_repo }}"
+    dest: "{{ app_home }}/app"
+    version: "{{ app_branch }}"
     force: yes
+    update: yes
   become: yes
-  become_user: "{{ app_user | default('yocto') }}"
+  become_user: "{{ app_user }}"
+  when: not repo_exists.stat.exists
+
+- name: Update application repository (subsequent deployments)
+  git:
+    repo: "{{ app_repo }}"
+    dest: "{{ app_home }}/app"
+    version: "{{ app_branch }}"
+    force: yes
+    update: yes
+  become: yes
+  become_user: "{{ app_user }}"
+  when: repo_exists.stat.exists
+  register: git_update
+  notify: restart application
 
 - name: Install Node.js dependencies
   npm:
-    path: "{{ app_home | default('/opt/yocto_builder') }}/app"
+    path: "{{ app_home }}/app"
     state: present
+    production: false
   become: yes
-  become_user: "{{ app_user | default('yocto') }}"
+  become_user: "{{ app_user }}"
+  register: npm_install
+  notify: restart application
+
+- name: Generate Prisma client
+  command: npm run db:generate
+  args:
+    chdir: "{{ app_home }}/app"
+  become: yes
+  become_user: "{{ app_user }}"
+  environment:
+    DATABASE_URL: "postgresql://{{ postgresql_user }}:{{ postgresql_password }}@{{ postgresql_host }}:{{ postgresql_port }}/{{ postgresql_db }}"
+  register: prisma_generate
+  changed_when: "'Generated Prisma Client' in prisma_generate.stdout"
 
 - name: Create environment file
   template:
     src: env.j2
-    dest: "{{ app_home | default('/opt/yocto_builder') }}/app/.env"
-    owner: "{{ app_user | default('yocto') }}"
-    group: "{{ app_group | default('yocto') }}"
+    dest: "{{ app_home }}/app/.env"
+    owner: "{{ app_user }}"
+    group: "{{ app_group }}"
     mode: '0600'
+  register: env_file
+  notify: restart application
+
+- name: Check if database exists
+  postgresql_db:
+    name: "{{ postgresql_db }}"
+    login_user: "{{ postgresql_user }}"
+    login_password: "{{ postgresql_password }}"
+    login_host: "{{ postgresql_host }}"
+    login_port: "{{ postgresql_port }}"
+  register: db_exists
+  ignore_errors: yes
+  changed_when: false
 
 - name: Run Prisma migrations
-  command: npx prisma migrate deploy
+  command: npm run db:deploy
   args:
-    chdir: "{{ app_home | default('/opt/yocto_builder') }}/app"
+    chdir: "{{ app_home }}/app"
   become: yes
-  become_user: "{{ app_user | default('yocto') }}"
+  become_user: "{{ app_user }}"
   environment:
-    DATABASE_URL: "postgresql://{{ postgresql_user | default('yocto_admin') }}:{{ postgresql_password | default('changeme') }}@{{ postgresql_host | default('localhost') }}:{{ postgresql_port | default('5432') }}/{{ postgresql_db | default('yocto_builder') }}"
+    DATABASE_URL: "postgresql://{{ postgresql_user }}:{{ postgresql_password }}@{{ postgresql_host }}:{{ postgresql_port }}/{{ postgresql_db }}"
+  register: prisma_migrate
+  changed_when: "'migrated' in prisma_migrate.stdout or 'No migration' not in prisma_migrate.stdout"
+  failed_when: prisma_migrate.rc != 0 and 'P1001' not in prisma_migrate.stderr
+
+- name: Check if build directory exists
+  stat:
+    path: "{{ app_home }}/app/.next"
+  register: build_exists
 
 - name: Build Next.js application
   command: npm run build
   args:
-    chdir: "{{ app_home | default('/opt/yocto_builder') }}/app"
+    chdir: "{{ app_home }}/app"
   become: yes
-  become_user: "{{ app_user | default('yocto') }}"
+  become_user: "{{ app_user }}"
+  environment:
+    NODE_ENV: production
+    DATABASE_URL: "postgresql://{{ postgresql_user }}:{{ postgresql_password }}@{{ postgresql_host }}:{{ postgresql_port }}/{{ postgresql_db }}"
+  register: build_result
+  changed_when: "'Compiled successfully' in build_result.stdout or build_result.rc == 0"
+  failed_when: build_result.rc != 0
+  notify: restart application
 
 - name: Create PM2 ecosystem file
   template:
     src: ecosystem.config.js.j2
-    dest: "{{ app_home | default('/opt/yocto_builder') }}/app/ecosystem.config.js"
-    owner: "{{ app_user | default('yocto') }}"
-    group: "{{ app_group | default('yocto') }}"
+    dest: "{{ app_home }}/app/ecosystem.config.js"
+    owner: "{{ app_user }}"
+    group: "{{ app_group }}"
     mode: '0644'
+  register: pm2_config
+  notify: restart application
 
-- name: Start application with PM2
+- name: Check if PM2 app is running
+  command: pm2 describe yocto-builder
+  args:
+    chdir: "{{ app_home }}/app"
+  become: yes
+  become_user: "{{ app_user }}"
+  register: pm2_status
+  changed_when: false
+  failed_when: false
+
+- name: Start application with PM2 (first time)
   command: pm2 start ecosystem.config.js
   args:
-    chdir: "{{ app_home | default('/opt/yocto_builder') }}/app"
+    chdir: "{{ app_home }}/app"
   become: yes
-  become_user: "{{ app_user | default('yocto') }}"
+  become_user: "{{ app_user }}"
+  when: pm2_status.rc != 0
+  register: pm2_start
 
 - name: Save PM2 process list
   command: pm2 save
   become: yes
-  become_user: "{{ app_user | default('yocto') }}"
+  become_user: "{{ app_user }}"
+  when: pm2_start is defined and pm2_start.changed
 
+- name: Ensure PM2 starts on boot
+  command: pm2 startup systemd -u "{{ app_user }}" --hp "{{ app_home }}"
+  become: yes
+  become_user: "{{ app_user }}"
+  register: pm2_startup
+  changed_when: "'PM2' in pm2_startup.stdout"
+  failed_when: false
+  when: pm2_startup.rc == 0 or pm2_startup.rc == 1
+
+- name: Verify PM2 application is running
+  command: pm2 describe yocto-builder
+  args:
+    chdir: "{{ app_home }}/app"
+  become: yes
+  become_user: "{{ app_user }}"
+  register: pm2_final_status
+  changed_when: false
+  failed_when: pm2_final_status.rc != 0
+
+- name: Display PM2 status
+  debug:
+    msg: "PM2 application 'yocto-builder' is {{ 'running' if pm2_final_status.rc == 0 else 'not running' }}"
